# yapr

.github/workflows/: main.yml
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: json_loader.cpp  json_loader.h  request_handler.cpp
sprint1/problems/map_json/solution/src/: http_server.h  json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/restaurant_multi_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/examples/boost_log/: CMakeLists.txt  main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: api_handler.cpp  api_handler.h  dog.h  file_handler.cpp  game.cpp  game.h  game_session.cpp  game_session.h  json_loader.cpp  main.cpp  player.h  players.h
sprint2/problems/command_line/solution/src/app_layer/: ticker.h
sprint2/problems/command_line/solution/src/model/: json_tags.h
sprint2/problems/command_line/solution/src/system/: cmd_line.cpp  settings.cpp
sprint2/problems/game_state/solution/: Dockerfile
sprint2/problems/game_state/solution/src/: api_handler.h  dog.cpp  dog.h  game.h  game_session.cpp  http_types.h  json_loader.h  main.cpp  model.cpp  player.h  request_handler.cpp  request_handler.h  response.cpp  response.h  token.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: api_handler.cpp  api_handler.h  dog.h  encode.h  file_handler.cpp  game.cpp  game.h  game_session.cpp  game_session.h  http_types.h  main.cpp  model.h  player.h  players.cpp  players.h  request_handler.h  response.cpp  token.h
sprint2/problems/logger/solution/: CMakeLists.txt  main.cpp  my_logger.cpp  my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  serv_answ.txt
sprint2/problems/move_players/solution/src/: api_handler.cpp  api_handler.h  dog.cpp  dog.h  game.h  game_session.cpp  game_session.h  http_types.h  json_loader.cpp  model.h  request.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  http_types.h  logger.cpp  main.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/src/: file_handler.cpp  file_handler.h  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: api_handler.cpp  api_handler.h  dog.h  game.cpp  game.h  game_session.cpp  game_session.h  main.cpp  model.cpp  model.h  player.cpp  players.cpp  (+1 more)
sprint3/problems/ammo/solution/: ammo.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/src/: request_handler.h
sprint3/problems/find_return/solution/src/app_layer/: api_handler.cpp
sprint3/problems/find_return/solution/src/collision/: collision_detector.h
sprint3/problems/find_return/solution/src/game_play/: game.cpp  game_session.cpp  game_session.h
sprint3/problems/find_return/solution/src/json/: json_loader.h  json_tags.h  lootdefinition.h
sprint3/problems/find_return/solution/src/model/: loot_generator.h  model.h  player.cpp  player.h  players.cpp
sprint3/problems/flamegraph/solution/: CMakeLists.txt  shoot.py
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gather/solution/src/: collision_detector.cpp
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/: api_handler.cpp  api_handler.h  dog.cpp  game.h  game_session.cpp  game_session.h  json_loader.cpp  json_loader.h  loot_generator.cpp  lootdefinition.cpp  main.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/gen_objects/solution/src/system/: cmd_line.h
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp
sprint3/problems/instrumentation/solution/: event2dot  report
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/src/app/: use_cases_impl.cpp
sprint4/problems/bookypedia-1/solution/src/domain/: author.h  book_fwd.h
sprint4/problems/bookypedia-1/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-1/solution/src/ui/: view.cpp
sprint4/problems/bookypedia-1/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: json_tags.h  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/state_serialization/precode/: CMakeLists.txt
sprint4/problems/state_serialization/solution/: CMakeLists.txt
sprint4/problems/state_serialization/solution/src/: main.cpp  response.cpp  response.h  token.h
sprint4/problems/state_serialization/solution/src/app_layer/: api_handler.cpp  api_handler.h  ticker.cpp
sprint4/problems/state_serialization/solution/src/game_play/: game.cpp  game_session.h
sprint4/problems/state_serialization/solution/src/json/: json_loader.cpp
sprint4/problems/state_serialization/solution/src/model/: dog.cpp  dog.h  model.cpp  model.h  players.cpp  players.h
sprint4/problems/state_serialization/solution/src/system/: backup.cpp  backup.h  cmd_line.cpp  cmd_line.h  settings.h
sprint4/problems/state_serialization/solution/tests/: collision-detector-tests.cpp  state-serialization-tests.cpp
(+99 files in other folders)
